Omnibox Refresh UI: Move security chip label left by 2dp for alignment

This moves the security chip label left by 2dp so it aligns with the
label-less separator, as well as URLs.

This improves the alignment of text with or without jog enabled. See
bug for screenshot.

Bug: 865546
Change-Id: I46918bc1dfe7ff43a8851206c92f2875fc1680f2
Reviewed-on: https://chromium-review.googlesource.com/1159686
Commit-Queue: Tommy Li <tommycli@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580363}
Former-commit-id: 066563c76de0f6639e195732c37ab280911db329